--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+    "angular2-drag-scroll": "^1.3.0",
     "core-js": "^2.4.1",
+    "d3": "^4.9.1",
+    "d3-ng2-service": "^1.15.0",
     "font-awesome": "^4.7.0",
+    "jsplumb": "^2.4.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -31,6 +35,7 @@
     "@angular/cli": "1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/d3": "^4.9.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
