--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: selenium/standalone-chrome:3.4.0
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
