--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --single-run",
+    "test-coverage": "ng test -cc --single-run",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -24,8 +25,6 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "angular2-drag-scroll": "^1.3.0",
     "core-js": "^2.4.1",
-    "d3": "^4.9.1",
-    "d3-ng2-service": "^1.15.0",
     "font-awesome": "^4.7.0",
     "jsplumb": "^2.4.3",
     "rxjs": "^5.1.0",
@@ -35,7 +34,6 @@
     "@angular/cli": "1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
-    "@types/d3": "^4.9.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
